feat: enhance job scraping platform with new models, views, and scraper management features

--- a/.gitignore
+++ b/.gitignore
@@ -317,3 +317,7 @@ fabric.properties
 # profiling data
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python,django
+development/learning_project.md
+development/plan-details.md
+development/plan-first.md
+development/dev_proc/plan-1.md
