feat: add progress tracking for scrapers and implement CVKeskus scraping functionality

--- a/.gitignore
+++ b/.gitignore
@@ -321,3 +321,5 @@ development/learning_project.md
 development/plan-details.md
 development/plan-first.md
 development/dev_proc/plan-1.md
+
+/development/
